leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__index_on_second_line_is_array_lit_expr.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "\n        x = a\n        [1]\n        "

---
- ROOT 0..35
  - "\n" NEWLINE 0..1
  - "        " WHITESPACE 1..9
  - Assignment 9..15
    - Expr 9..10
      - PrimaryExpr 9..10
        - "x" ID 9..10
    - " " WHITESPACE 10..11
    - "=" EQ 11..12
    - " " WHITESPACE 12..13
    - Expr 13..14
      - PrimaryExpr 13..14
        - "a" ID 13..14
    - "\n" NEWLINE 14..15
  - "        " WHITESPACE 15..23
  - Expr 23..26
    - PrimaryExpr 23..26
      - ArrayLitExpr 23..26
        - "[" L_BRACKET 23..24
        - Expr 24..25
          - PrimaryExpr 24..25
            - "1" NUMBER 24..25
        - "]" R_BRACKET 25..26
  - "\n" NEWLINE 26..27
  - "        " WHITESPACE 27..35

