leafbuild-syntax/src/snapshots/leafbuild_syntax__tests__parse_output__var_assignment_with_proper_expr_as_value.snap
---
source: leafbuild-syntax/src/tests.rs
expression: "let x = 1\n"

---
- ROOT 0..10
  - Declaration 0..10
    - "let" LET_KW 0..3
    - " " WHITESPACE 3..4
    - "x" ID 4..5
    - " " WHITESPACE 5..6
    - "=" EQ 6..7
    - " " WHITESPACE 7..8
    - Expr 8..9
      - PrimaryExpr 8..9
        - "1" NUMBER 8..9
    - "\n" NEWLINE 9..10

